[gd_scene load_steps=8 format=3 uid="uid://du8n473tknlxu"]

[ext_resource type="Script" uid="uid://bosoocnjm1hve" path="res://GameUtilities/game_utilities.gd" id="1_foxqv"]
[ext_resource type="PackedScene" path="res://Assets/transition.tscn" id="2_b3hmv"]

[sub_resource type="Animation" id="Animation_iluso"]
resource_name = "Apparition"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1, 34]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Regle:theme_override_font_sizes/font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 22]
}

[sub_resource type="Animation" id="Animation_b3hmv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [34]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Regle:theme_override_font_sizes/font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Décompte:theme_override_font_sizes/font_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [60]
}

[sub_resource type="Animation" id="Animation_qsawx"]
resource_name = "décompte"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Décompte:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 0.85, 0.9499999, 1.1, 1.1999999, 1.85, 1.9499999, 2.1, 2.1999998, 2.85, 2.9499998, 3.1, 3.1999998, 3.95, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1, 80, 60, 60, 1, 80, 60, 60, 1, 80, 60, 60, 1, 80, 60, 60, 1]
}

[sub_resource type="Animation" id="Animation_4gwtc"]
resource_name = "FIN"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Décompte:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1, 80, 60]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4gwtc"]
_data = {
&"Apparition": SubResource("Animation_iluso"),
&"FIN": SubResource("Animation_4gwtc"),
&"RESET": SubResource("Animation_b3hmv"),
&"décompte": SubResource("Animation_qsawx")
}

[node name="GameUtilities" type="Node"]
script = ExtResource("1_foxqv")

[node name="Utilities" type="Node" parent="."]

[node name="Timer" type="Label" parent="Utilities"]
offset_left = 1280.0
offset_top = 20.0
offset_right = 1340.0
offset_bottom = 69.0
text = "Temps :
0.0"
horizontal_alignment = 2

[node name="NomJeu" type="Label" parent="Utilities"]
offset_left = 587.0
offset_top = 400.0
offset_right = 794.0
offset_bottom = 475.0
theme_override_font_sizes/font_size = 34
text = "NOM DU JEU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Regle" type="Label" parent="Utilities"]
offset_top = 570.0
offset_right = 1380.0
offset_bottom = 645.0
theme_override_font_sizes/font_size = 22
text = "règles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Décompte" type="Label" parent="Utilities"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.5
offset_top = -67.0
offset_right = 103.5
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Utilities"]
root_node = NodePath("../NomJeu")
libraries = {
&"": SubResource("AnimationLibrary_4gwtc")
}

[node name="Transition" parent="Utilities" instance=ExtResource("2_b3hmv")]

[node name="TransitionTimer" type="Timer" parent="Utilities/Transition"]
wait_time = 0.2

[connection signal="timeout" from="Utilities/Transition/TransitionTimer" to="." method="_on_transition_timer_timeout"]
